[gd_scene load_steps=19 format=3 uid="uid://cktksmdbn2nmn"]

[ext_resource type="PackedScene" uid="uid://bkx25sp71flk5" path="res://scenes/character/character_000_base.tscn" id="1_q5all"]
[ext_resource type="Script" uid="uid://dqppqdw4n40ts" path="res://scripts/character/zombie/zombie_000_base.gd" id="2_72xfp"]
[ext_resource type="FontFile" uid="uid://cchqc1dtcle23" path="res://assets/fonts/Bake_Soda.otf" id="2_p5arj"]
[ext_resource type="Script" uid="uid://d0w7rpih1wyo6" path="res://scripts/character/components/hp_component/component_hp_zombie.gd" id="3_rdbr5"]
[ext_resource type="Script" uid="uid://4o1wtnifn4tq" path="res://scripts/character/components/hp_component/component_hp_stage_change.gd" id="6_in461"]
[ext_resource type="Script" uid="uid://b2atnvuqp1kcr" path="res://scripts/character/components/attack_behavior_component/component_attack_zombie_norm.gd" id="7_b1t0g"]
[ext_resource type="Script" uid="uid://lbc88mt5q1s2" path="res://scripts/character/components/detect_component/detect_component_zombie.gd" id="8_kbcr1"]
[ext_resource type="Script" uid="uid://dmydsf6020r5f" path="res://scripts/character/components/component_move.gd" id="8_yye2l"]
[ext_resource type="Script" uid="uid://bk3w4sifj7es" path="res://scripts/character/components/charred_component/component_charred_zombie_norm.gd" id="11_t14t4"]
[ext_resource type="Script" uid="uid://b3wavy585v5p1" path="res://scripts/character/components/component_hurt_box_zombie.gd" id="12_6mvk0"]
[ext_resource type="Script" uid="uid://c84r00ur563m8" path="res://scripts/character/components/component_drop_item.gd" id="12_ewfmg"]
[ext_resource type="Script" uid="uid://bk802l8n0pnjb" path="res://scripts/character/components/swim_box_component/component_swim_box.gd" id="12_kbcr1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xdwn0"]
bg_color = Color(0.137255, 0.0196078, 0.027451, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rdbr5"]
bg_color = Color(1, 0.290196, 0.454902, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.137255, 0.0196078, 0.027451, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="LabelSettings" id="LabelSettings_72xfp"]
font = ExtResource("2_p5arj")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t14t4"]
size = Vector2(50, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewfmg"]
size = Vector2(40, 20)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xdwn0"]
radius = 20.0
height = 100.0

[node name="Zombie000Base" node_paths=PackedStringArray("node_no_change_direction", "node_follow_body_direction", "node2d_detect_in_slope") instance=ExtResource("1_q5all")]
script = ExtResource("2_72xfp")
zombie_type = 0
is_ignore_ladder = false
iron_type = 0
init_be_attack_status = 1
body_change_on_pool = null
is_trigger_squash_pos_judge = false
is_trigger_tall_nut_stop_jump = false
is_walk = true
is_attack = false
is_swimming = false
sfx_enter_name = &""
node_no_change_direction = []
node_follow_body_direction = []
node2d_detect_in_slope = []

[node name="NodeDrop" type="Node2D" parent="Body" index="1"]
unique_name_in_owner = true
visible = false

[node name="HpStageChangeComponent" type="Node2D" parent="." index="3"]
unique_name_in_owner = true
script = ExtResource("6_in461")

[node name="HpComponent" parent="." index="4"]
script = ExtResource("3_rdbr5")
max_hp_armor1 = 0
max_hp_armor2 = 0
sfx_be_attack_armor1 = 0
sfx_be_attack_armor2 = 0
max_hp = 270

[node name="VBoxContainer" type="VBoxContainer" parent="HpComponent" index="0"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -64.0
offset_right = 20.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Armor2Control" type="Control" parent="HpComponent/VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="ProgressBarHpArmor2" type="ProgressBar" parent="HpComponent/VBoxContainer/Armor2Control" index="0"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.176471)
custom_minimum_size = Vector2(66, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -10.0
offset_right = 33.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_xdwn0")
theme_override_styles/fill = SubResource("StyleBoxFlat_rdbr5")
max_value = 1.0
value = 0.64
show_percentage = false

[node name="LabelHpArmor2" type="Label" parent="HpComponent/VBoxContainer/Armor2Control" index="1"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -11.5
offset_right = 36.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "1100"
label_settings = SubResource("LabelSettings_72xfp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Armor1Control" type="Control" parent="HpComponent/VBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="ProgressBarHpArmor1" type="ProgressBar" parent="HpComponent/VBoxContainer/Armor1Control" index="0"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.176471)
custom_minimum_size = Vector2(66, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -10.0
offset_right = 33.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_xdwn0")
theme_override_styles/fill = SubResource("StyleBoxFlat_rdbr5")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="LabelHpArmor1" type="Label" parent="HpComponent/VBoxContainer/Armor1Control" index="1"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -11.5
offset_right = 36.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "600"
label_settings = SubResource("LabelSettings_72xfp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HpControl" type="Control" parent="HpComponent/VBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="ProgressBarHp" type="ProgressBar" parent="HpComponent/VBoxContainer/HpControl" index="0"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.176471)
custom_minimum_size = Vector2(66, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -10.0
offset_right = 33.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_xdwn0")
theme_override_styles/fill = SubResource("StyleBoxFlat_rdbr5")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="LabelHp" type="Label" parent="HpComponent/VBoxContainer/HpControl" index="1"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -11.5
offset_right = 36.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "300"
label_settings = SubResource("LabelSettings_72xfp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharredComponent" type="Node2D" parent="." index="5"]
unique_name_in_owner = true
visible = false
script = ExtResource("11_t14t4")

[node name="ZombieCharred" type="Node2D" parent="CharredComponent" index="0"]
unique_name_in_owner = true

[node name="CharredCorrect" type="Node2D" parent="CharredComponent/ZombieCharred" index="0"]
position = Vector2(-43, -117)

[node name="AttackComponent" type="Node2D" parent="." index="6"]
unique_name_in_owner = true
script = ExtResource("7_b1t0g")

[node name="DetectComponent" type="Node2D" parent="AttackComponent" index="0"]
unique_name_in_owner = true
script = ExtResource("8_kbcr1")
zomie_enemy_collision_lay = 2082

[node name="Area2d" type="Area2D" parent="AttackComponent/DetectComponent" index="0"]
position = Vector2(0, -40)
collision_layer = 0
collision_mask = 34
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackComponent/DetectComponent/Area2d" index="0"]
position = Vector2(-13, 0)
shape = SubResource("RectangleShape2D_t14t4")

[node name="MoveComponent" type="Node2D" parent="." index="7"]
unique_name_in_owner = true
script = ExtResource("8_yye2l")

[node name="SwimBoxComponent" type="Node2D" parent="." index="8"]
unique_name_in_owner = true
script = ExtResource("12_kbcr1")

[node name="Area2D" type="Area2D" parent="SwimBoxComponent" index="0"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwimBoxComponent/Area2D" index="0"]
position = Vector2(0, -40)
shape = SubResource("RectangleShape2D_ewfmg")
debug_color = Color(0.974132, 0, 0.429002, 0.42)

[node name="DropItemComponent" type="Node2D" parent="." index="9"]
unique_name_in_owner = true
script = ExtResource("12_ewfmg")
can_drop_x_range = null
drop_coin_rate = null
drop_coin_silver_glod_diamond_rate = null
drop_garden_plant_rate = null
is_enable_default = null

[node name="HurtBoxComponent" parent="." index="10"]
script = ExtResource("12_6mvk0")
x_correct_on_attack = -20.0

[node name="HurtBoxDetection" parent="HurtBoxComponent" index="0"]
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent/HurtBoxDetection" index="0"]
position = Vector2(0, -50)
shape = SubResource("CapsuleShape2D_xdwn0")

[node name="HurtBoxReal" parent="HurtBoxComponent" index="1"]
collision_layer = 512

[node name="CollisionShape2D" parent="HurtBoxComponent/HurtBoxReal" index="0"]
position = Vector2(0, -50)
shape = SubResource("CapsuleShape2D_xdwn0")

[node name="HurtBoxDetectionOnAttack" type="Area2D" parent="HurtBoxComponent" index="2"]
unique_name_in_owner = true
collision_layer = 16
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent/HurtBoxDetectionOnAttack" index="0"]
position = Vector2(0, -50)
shape = SubResource("CapsuleShape2D_xdwn0")

[connection signal="area_entered" from="SwimBoxComponent/Area2D" to="SwimBoxComponent" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="SwimBoxComponent/Area2D" to="SwimBoxComponent" method="_on_area_2d_area_exited"]
